# swagger.json
@@ -47,22 +47,6 @@
         }
       }
     },
-    "/auth/test": {
-      "get": {
-        "tags": [
-          "Authentication"
-        ],
-        "description": "Cerrar sesión",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/movies": {
       "get": {
         "tags": [
@@ -88,7 +72,43 @@
             "name": "body",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/MovieInput"
+              "type": "object",
+              "properties": {
+                "title": {
+                  "type": "string",
+                  "example": "Example Movie"
+                },
+                "genre": {
+                  "type": "string",
+                  "example": "Action"
+                },
+                "year": {
+                  "type": "number",
+                  "example": 2022
+                },
+                "director": {
+                  "type": "string",
+                  "example": "John Doe"
+                },
+                "rating": {
+                  "type": "number",
+                  "example": 8.5
+                },
+                "actors": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  },
+                  "example": [
+                    "Actor1",
+                    "Actor2"
+                  ]
+                },
+                "plot": {
+                  "type": "string",
+                  "example": "A brief summary of the movie plot"
+                }
+              }
             }
           }
         ],
@@ -147,7 +167,43 @@
             "name": "body",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/MovieInput"
+              "type": "object",
+              "properties": {
+                "title": {
+                  "type": "string",
+                  "example": "Example Movie"
+                },
+                "genre": {
+                  "type": "string",
+                  "example": "Action"
+                },
+                "year": {
+                  "type": "number",
+                  "example": 2022
+                },
+                "director": {
+                  "type": "string",
+                  "example": "John Doe"
+                },
+                "rating": {
+                  "type": "number",
+                  "example": 8.5
+                },
+                "actors": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  },
+                  "example": [
+                    "Actor1",
+                    "Actor2"
+                  ]
+                },
+                "plot": {
+                  "type": "string",
+                  "example": "A brief summary of the movie plot"
+                }
+              }
             }
           }
         ],
@@ -191,42 +247,157 @@
           }
         }
       }
-    }
-  },
-  "definitions": {
-    "MovieInput": {
-      "type": "object",
-      "properties": {
-        "title": {
-          "type": "string",
-          "example": "Example Movie"
-        },
-        "genre": {
-          "type": "string",
-          "example": "Action"
-        },
-        "year": {
-          "type": "number",
-          "example": 2022
-        },
-        "director": {
-          "type": "string",
-          "example": "John Doe"
-        },
-        "rating": {
-          "type": "number",
-          "example": 8.5
-        },
-        "actors": {
-          "type": "array",
-          "items": {
+    },
+    "/users": {
+
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Get all users",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Create a new user",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "User created successfully"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Get details of a user by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+
+      "put": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Update details of a user by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
             "type": "string"
           },
-          "example": ["Actor1", "Actor2"]
-        },
-        "plot": {
-          "type": "string",
-          "example": "A brief summary of the movie plot"
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User updated successfully"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Delete a user by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "User deleted successfully"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
         }
       }
     }
